[tool.poetry]
name = "chia.template"
version = "0.1.0"
description = ""
authors = ["Rainforest Cheng <rainforestnick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
chia-blockchain = {path = "chia-blockchain"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
yapf = "^0.40.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
